Closed Bug 984078 Opened 12 years ago Closed 12 years ago

[Gtk3] Menu entries doesn't align in Web Developer sub menu

Categories

(Core :: Widget: Gtk, defect)

All
Linux
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla31

People

(Reporter: cork, Assigned: stransky)

References

Details

Attachments

(2 files, 1 obsolete file)

Attached image web-developer.png
The menu entries in the Web Developer submenu doesn't align on the left side.
Hardware: x86_64 → All
Yeah, I can see it too.
Assignee: nobody → stransky
That's more general problem. Some menu entries (like complete View->Character encoding) ignores minimal menu item size and seems to missing border/padding too. No idea why most of them are rendered correctly and some ones not...
Attached patch patch (obsolete) — Splinter Review
It's because we use different borders for check/radio menu items. This patch sync border types for all menu items.
Attachment #8408979 - Flags: review?(karlt)
Comment on attachment 8408979 [details] [diff] [review] patch > return MOZ_GTK_SUCCESS; > } >- case MOZ_GTK_CHECKMENUITEM: >- case MOZ_GTK_RADIOMENUITEM: >- ensure_check_menu_item_widget(); >- w = gCheckMenuItemWidget; > break; Please remove this "break" line, which is now unreachable.
Attachment #8408979 - Flags: review?(karlt) → review+
Attachment #8408979 - Attachment is obsolete: true
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla31
Status: RESOLVED → VERIFIED
Blocks: 1034064
No longer blocks: 1034064
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: