Bug 984078 - Use the same border style for all menu items. r=karlt